--- a/src/pages/testing/test-abandonment/test-abandoning/test-abandoning.html
+++ b/src/pages/testing/test-abandonment/test-abandoning/test-abandoning.html
@@ -14,7 +14,7 @@
 </ion-header>
 
 <ion-content class="content-background-color-grey">
-    <ion-list>
+    <ion-list text-wrap>
         <ion-item-group>
             <ion-item-divider padding-left>Reason(s) for abandoning this test</ion-item-divider>
             <ion-item text-wrap padding-horizontal
