--- a/src/pages/testing/test-creation/test-types-list/test-types-list.html
+++ b/src/pages/testing/test-creation/test-types-list/test-types-list.html
@@ -16,7 +16,7 @@
   <ion-list>
     <ion-item-group>
       <ng-container *ngFor="let testType of testTypeReferenceData | filterTestTypeByVehicle: vehicleData">
-        <ion-item detail-none padding-left
+        <ion-item detail-none padding-left text-wrap
                   class="list-item-height"
                   *ngIf="vehicleData.testTypes.length === 0 || canDisplay(addedTestTypesIds(vehicleData), testType) && canDisplayCategory(testType, addedTestTypesIds(vehicleData))"
                   (click)="selectedItem(testType, vehicleData)">
