--- a/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.html
+++ b/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.html
@@ -1,205 +1,206 @@
 <ion-header>
-    <ion-navbar>
-        <ion-title margin-left>
-            <span>Brakes</span>
-        </ion-title>
-    </ion-navbar>
+  <ion-navbar>
+    <ion-title margin-left>
+      <span>Brakes</span>
+    </ion-title>
+  </ion-navbar>
 
-    <ion-toolbar  color="tertiary" *ngIf="vehicleData.techRecord.statusCode===TECH_RECORD_STATUS.PROVISIONAL" >
-        <ion-title padding-left>{{ APP_STRINGS.PROVISIONAL_LABEL_TEXT }}</ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="tertiary" *ngIf="vehicleData.techRecord.statusCode===TECH_RECORD_STATUS.PROVISIONAL">
+    <ion-title padding-left>{{ APP_STRINGS.PROVISIONAL_LABEL_TEXT }}</ion-title>
+  </ion-toolbar>
 
-  </ion-header>
+</ion-header>
 
-<ion-content no-padding *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL); else showTrailerBrakesPage">
-    <div text-uppercase
-         text-center
-         class="vehicle-header-vrm-number">
-        {{ vehicleData.vrm | formatVrm }}
-    </div>
+<ion-content no-padding
+             *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL); else showTrailerBrakesPage">
+  <div text-uppercase
+       text-center
+       class="vehicle-header-vrm-number">
+    {{ vehicleData.vrm | formatVrm }}
+  </div>
 
-    <ion-list class="vehicle-list">
-        <ion-list-header>
-        </ion-list-header>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Brake code</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.brakeCode }}</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Service</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.dataTrBrakeOne }}</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left
-                  [ngClass]="{'flex-direction-column': vehicleData.techRecord.brakes.dataTrBrakeTwo && vehicleData.techRecord.brakes.dataTrBrakeTwo.length > 35}">
-            <ion-label>
-                <h3>Secondary</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.dataTrBrakeTwo }}</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Parking</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.dataTrBrakeThree }}</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Retarder 1</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.retarderBrakeOne }}</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Retarder 2</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.retarderBrakeTwo }}</p>
-            </div>
-        </ion-item>
-    </ion-list>
+  <ion-list class="vehicle-list" text-wrap>
+    <ion-list-header>
+    </ion-list-header>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Brake code</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.brakeCode }}</p>
+      </div>
+    </ion-item>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Service</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.dataTrBrakeOne }}</p>
+      </div>
+    </ion-item>
+    <ion-item margin-left
+              [ngClass]="{'flex-direction-column': vehicleData.techRecord.brakes.dataTrBrakeTwo && vehicleData.techRecord.brakes.dataTrBrakeTwo.length > 35}">
+      <ion-label>
+        <h3>Secondary</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.dataTrBrakeTwo }}</p>
+      </div>
+    </ion-item>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Parking</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.dataTrBrakeThree }}</p>
+      </div>
+    </ion-item>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Retarder 1</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.retarderBrakeOne }}</p>
+      </div>
+    </ion-item>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Retarder 2</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.retarderBrakeTwo }}</p>
+      </div>
+    </ion-item>
+  </ion-list>
 
-    <ion-list class="vehicle-list">
-        <ion-list-header padding-left
-                            padding-right
-                            text-wrap
-                            class="list-header-double">
-                            BRAKE FORCE<br> NO WHEELS LOCKED
-        </ion-list-header>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Service</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsNotLocked.serviceBrakeForceA }}</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Secondary</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsNotLocked.secondaryBrakeForceA }}</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Parking</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsNotLocked.parkingBrakeForceA }}</p>
-            </div>
-        </ion-item>
-    </ion-list>
+  <ion-list class="vehicle-list">
+    <ion-list-header padding-left
+                     padding-right
+                     text-wrap
+                     class="list-header-double">
+      BRAKE FORCE<br> NO WHEELS LOCKED
+    </ion-list-header>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Service</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsNotLocked.serviceBrakeForceA }}</p>
+      </div>
+    </ion-item>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Secondary</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsNotLocked.secondaryBrakeForceA }}</p>
+      </div>
+    </ion-item>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Parking</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsNotLocked.parkingBrakeForceA }}</p>
+      </div>
+    </ion-item>
+  </ion-list>
 
-    <ion-list class="vehicle-list">
-        <ion-list-header padding-left
-                            padding-right
-                            text-wrap
-                            class="list-header-double">
-                            BRAKE FORCE<br> UP TO AND INCLUDING HALF WHEELS LOCKED
-        </ion-list-header>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Service</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsUpToHalfLocked.serviceBrakeForceB }}</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Secondary</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsUpToHalfLocked.secondaryBrakeForceB }}</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Parking</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsUpToHalfLocked.parkingBrakeForceB }}</p>
-            </div>
-        </ion-item>
-    </ion-list>
+  <ion-list class="vehicle-list">
+    <ion-list-header padding-left
+                     padding-right
+                     text-wrap
+                     class="list-header-double">
+      BRAKE FORCE<br> UP TO AND INCLUDING HALF WHEELS LOCKED
+    </ion-list-header>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Service</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsUpToHalfLocked.serviceBrakeForceB }}</p>
+      </div>
+    </ion-item>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Secondary</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsUpToHalfLocked.secondaryBrakeForceB }}</p>
+      </div>
+    </ion-item>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>Parking</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.techRecord.brakes.brakeForceWheelsUpToHalfLocked.parkingBrakeForceB }}</p>
+      </div>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
 
 <ng-template #showTrailerBrakesPage><!-- Brakes page only for trailers -->
-    <ion-content no-padding>
-        <div text-uppercase text-center class="vehicle-header-vrm-number">
-            {{ vehicleData.trailerId }}
+  <ion-content no-padding>
+    <div text-uppercase text-center class="vehicle-header-vrm-number">
+      {{ vehicleData.trailerId }}
+    </div>
+
+    <ion-list class="vehicle-list" *ngFor="let axle of vehicleData.techRecord?.axles">
+      <ion-list-header padding-left padding-right text-wrap>AXLE {{ axle.axleNumber }}</ion-list-header>
+
+      <ion-item margin-left>
+        <ion-label>
+          <h3>Brake actuator</h3>
+        </ion-label>
+        <div item-content padding-right>
+          <p>{{ axle?.brakes?.brakeActuator }}</p>
         </div>
+      </ion-item>
 
-        <ion-list class="vehicle-list" *ngFor="let axle of vehicleData.techRecord?.axles">
-            <ion-list-header padding-left padding-right text-wrap>AXLE {{ axle.axleNumber }}</ion-list-header>
+      <ion-item margin-left>
+        <ion-label>
+          <h3>Lever length</h3>
+        </ion-label>
+        <div item-content padding-right>
+          <p>{{ axle?.brakes?.leverLength }}</p>
+        </div>
+      </ion-item>
 
-            <ion-item margin-left>
-                <ion-label>
-                    <h3>Brake actuator</h3>
-                </ion-label>
-                <div item-content padding-right>
-                    <p>{{ axle?.brakes?.brakeActuator }}</p>
-                </div>
-            </ion-item>
+      <ion-item margin-left>
+        <ion-label>
+          <h3>Spring brake parking</h3>
+        </ion-label>
+        <div item-content padding-right>
+          <p>{{ axle?.brakes?.springBrakeParking !== null ? (axle?.brakes?.springBrakeParking | formatBoolean) : '' }}</p>
+        </div>
+      </ion-item>
 
-            <ion-item margin-left>
-                <ion-label>
-                    <h3>Lever length</h3>
-                </ion-label>
-                <div item-content padding-right>
-                    <p>{{ axle?.brakes?.leverLength }}</p>
-                </div>
-            </ion-item>
+    </ion-list>
 
-            <ion-item margin-left>
-                <ion-label>
-                    <h3>Spring brake parking</h3>
-                </ion-label>
-                <div item-content padding-right>
-                    <p>{{ axle?.brakes?.springBrakeParking !== null ? (axle?.brakes?.springBrakeParking | formatBoolean) : '' }}</p>
-                </div>
-            </ion-item>
+    <ion-list class="vehicle-list">
+      <ion-list-header>
+      </ion-list-header>
 
-        </ion-list>
+      <ion-item margin-left>
+        <ion-label>
+          <h3>Load sensing valve</h3>
+        </ion-label>
+        <div item-content padding-right>
+          <p>{{ vehicleData.techRecord?.brakes?.loadSensingValve | formatBoolean }}</p>
+        </div>
+      </ion-item>
 
-        <ion-list class="vehicle-list">
-            <ion-list-header>
-            </ion-list-header>
+      <ion-item margin-left>
+        <ion-label>
+          <h3>Antilock braking system</h3>
+        </ion-label>
+        <div item-content padding-right>
+          <p>{{ vehicleData.techRecord?.brakes?.antilockBrakingSystem | formatBoolean }}</p>
+        </div>
+      </ion-item>
 
-            <ion-item margin-left>
-                <ion-label>
-                    <h3>Load sensing valve</h3>
-                </ion-label>
-                <div item-content padding-right>
-                    <p>{{ vehicleData.techRecord?.brakes?.loadSensingValve | formatBoolean }}</p>
-                </div>
-            </ion-item>
-
-            <ion-item margin-left>
-                <ion-label>
-                    <h3>Antilock braking system</h3>
-                </ion-label>
-                <div item-content padding-right>
-                    <p>{{ vehicleData.techRecord?.brakes?.antilockBrakingSystem | formatBoolean }}</p>
-                </div>
-            </ion-item>
-
-        </ion-list>
-    </ion-content>
+    </ion-list>
+  </ion-content>
 </ng-template>
